[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/UI/PixelArialFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Common/UI/TestingPropertyPanels/PropertySetter/PropertySetterNumeric.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="PropertySetterNumeric" type="HBoxContainer"]
margin_right = 199.0
margin_bottom = 27.0
alignment = 2
script = ExtResource( 2 )

[node name="SettingTitle" type="Label" parent="."]
margin_left = 9.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Some Setting:"

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 113.0
margin_right = 199.0
margin_bottom = 27.0
theme = SubResource( 1 )
max_value = 999999.0
step = 0.0

[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
